--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,15 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+      <script>
+           var alert = localStorage.getItem('alert');
+  if (alert === 'true'){
+  }
+  else {
+    alert('To make the proxy function, once you input your search, if the screen goes white, right-click the screen and select reload/refresh frame. You should only need to do this once.');
+    localStorage.setItem('alert', 'true')
+  } 
+      </script>
       <link rel="stylesheet" href="index.css">
       <script type="text/javascript" src="//counter.websiteout.net/js/7/10/5/0"></script>
       <link rel="shortcut icon" type="image/jpg" href="~/favicon.ico"/>
