--- a/static/index.html
+++ b/static/index.html
@@ -4,13 +4,13 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <script>
-           var alert = localStorage.getItem('alert');
+          function alert(){ var alert = localStorage.getItem('alert');
   if (alert === 'true'){
   }
   else {
     alert('To make the proxy function, once you input your search, if the screen goes white, right-click the screen and select reload/refresh frame. You should only need to do this once.');
     localStorage.setItem('alert', 'true')
-  } 
+  } }
       </script>
       <link rel="stylesheet" href="index.css">
       <script type="text/javascript" src="//counter.websiteout.net/js/7/10/5/0"></script>
@@ -19,7 +19,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
    </head>
-   <body>
+   <body onload='alert();'>
       <div id="header">
          <img src="logo.gif" alt="Logo">
       </div>
