--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
    </head>
    <body onload='alert();'>
       <div id="header">
-         <img src="logo.gif" alt="Logo">
+         <p onload="alert();">To make the proxy function, once you input your search, if the screen goes white, right-click the screen and select reload/refresh frame. You should only need to do this once.</p>
       </div>
       <div id="content">
          <h1>Search the Web and use the BEST static proxy!</h1>
@@ -30,13 +30,7 @@
             <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
             <input id="uv-address" type="text" placeholder="Search Google or type an URL" class="form__input"/>
           </form>
-          <div class="desc left-margin">
-            <p id="uv-error"></p>
-            <pre id="uv-error-code"></pre>
-          </div>
-         <a href="https://discord.gg/zJhPJYJCeJ" target="_blank" class="fa-brands fa-discord"></a>
-         <a href="https://github.com/TheTIW/UV-Static" target="_blank"class="fa-brands fa-github"></a>
-         <a href="https://starttiw.org" target="_blank"class="fa-solid fa-cloud"></a>
+
       </div>
       <script src="uv/uv.bundle.js" defer></script>
       <script src="uv/uv.config.js" defer></script>
