--- a/static/index.html
+++ b/static/index.html
@@ -39,7 +39,6 @@
       <script src="index.js" defer></script>
       <script src="error.js" defer></script>
       <div id="footer">
-         <p>&copy; 2023 TIW. All rights reserved.</p>
-      </div>
+<p>Credits to the TIW for making the original UV static.</p>
    </body>
 </html>
